@@ -34,6 +34,7 @@ Stable versions
 	- reverted to older YM3812 emulator for license compliance
 	- fix byte swap error in HSC to SBI Adlib OPL2 instrument conversion
 	- fix Reality Adlib tracker loader
+	- implement Adlib OPL2 synth volume setting
 
 2.5.1 (20071207): 11 years after xmp 0.09a, the first public release!
 	- fix Winamp plugin default sampling rate (reported by Mirko Buffoni)
